--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,14 @@
 {
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#96e284",
-    "activityBar.background": "#96e284",
+    "activityBar.activeBackground": "#b9ecad",
+    "activityBar.background": "#b9ecad",
     "activityBar.foreground": "#15202b",
     "activityBar.inactiveForeground": "#15202b99",
-    "activityBarBadge.background": "#647bda",
-    "activityBarBadge.foreground": "#e7e7e7",
+    "activityBarBadge.background": "#7e91e1",
+    "activityBarBadge.foreground": "#15202b",
     "commandCenter.border": "#15202b99",
-    "sash.hoverBorder": "#96e284",
+    "sash.hoverBorder": "#b9ecad",
     "statusBar.background": "#96e284",
-    "statusBar.debuggingBackground": "#d084e2",
-    "statusBar.debuggingForeground": "#15202b",
     "statusBar.foreground": "#15202b",
     "statusBarItem.hoverBackground": "#73d85b",
     "statusBarItem.remoteBackground": "#96e284",
